--- a/ANN/HyperparameterTuning.ipynb
+++ b/ANN/HyperparameterTuning.ipynb
@@ -42,7 +42,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "08149b9f-f615-460a-c173-ddb753c2f75d"
+        "outputId": "3027e4ec-022f-465f-cb96-46caadaa195f"
       },
       "source": [
         "# Install TensorFlow\n",
@@ -56,7 +56,7 @@
         "import tensorflow as tf\n",
         "print(tf.__version__)"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -79,47 +79,33 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2b1eaafd-347a-4a0f-8ff9-f4e18a7fa0eb"
+        "outputId": "0565efc1-d84e-4d06-a987-3cb066904e16"
       },
       "source": [
         "!pip install -U keras-tuner"
       ],
-      "execution_count": 3,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Collecting keras-tuner\n",
-            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/20/ec/1ef246787174b1e2bb591c95f29d3c1310070cad877824f907faba3dade9/keras-tuner-1.0.2.tar.gz (62kB)\n",
-            "\r\u001b[K     |█████▏                          | 10kB 21.5MB/s eta 0:00:01\r\u001b[K     |██████████▍                     | 20kB 17.7MB/s eta 0:00:01\r\u001b[K     |███████████████▋                | 30kB 15.2MB/s eta 0:00:01\r\u001b[K     |████████████████████▉           | 40kB 14.6MB/s eta 0:00:01\r\u001b[K     |██████████████████████████      | 51kB 11.9MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████▎| 61kB 12.1MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 71kB 7.1MB/s \n",
-            "\u001b[?25hRequirement already satisfied, skipping upgrade: packaging in /usr/local/lib/python3.6/dist-packages (from keras-tuner) (20.8)\n",
-            "Requirement already satisfied, skipping upgrade: future in /usr/local/lib/python3.6/dist-packages (from keras-tuner) (0.16.0)\n",
-            "Requirement already satisfied, skipping upgrade: numpy in /usr/local/lib/python3.6/dist-packages (from keras-tuner) (1.19.4)\n",
-            "Requirement already satisfied, skipping upgrade: tabulate in /usr/local/lib/python3.6/dist-packages (from keras-tuner) (0.8.7)\n",
-            "Collecting terminaltables\n",
-            "  Downloading https://files.pythonhosted.org/packages/9b/c4/4a21174f32f8a7e1104798c445dacdc1d4df86f2f26722767034e4de4bff/terminaltables-3.1.0.tar.gz\n",
-            "Collecting colorama\n",
-            "  Downloading https://files.pythonhosted.org/packages/44/98/5b86278fbbf250d239ae0ecb724f8572af1c91f4a11edf4d36a206189440/colorama-0.4.4-py2.py3-none-any.whl\n",
+            "Requirement already up-to-date: keras-tuner in /usr/local/lib/python3.6/dist-packages (1.0.2)\n",
             "Requirement already satisfied, skipping upgrade: tqdm in /usr/local/lib/python3.6/dist-packages (from keras-tuner) (4.41.1)\n",
-            "Requirement already satisfied, skipping upgrade: requests in /usr/local/lib/python3.6/dist-packages (from keras-tuner) (2.23.0)\n",
+            "Requirement already satisfied, skipping upgrade: numpy in /usr/local/lib/python3.6/dist-packages (from keras-tuner) (1.19.4)\n",
             "Requirement already satisfied, skipping upgrade: scipy in /usr/local/lib/python3.6/dist-packages (from keras-tuner) (1.4.1)\n",
+            "Requirement already satisfied, skipping upgrade: tabulate in /usr/local/lib/python3.6/dist-packages (from keras-tuner) (0.8.7)\n",
+            "Requirement already satisfied, skipping upgrade: requests in /usr/local/lib/python3.6/dist-packages (from keras-tuner) (2.23.0)\n",
+            "Requirement already satisfied, skipping upgrade: packaging in /usr/local/lib/python3.6/dist-packages (from keras-tuner) (20.8)\n",
             "Requirement already satisfied, skipping upgrade: scikit-learn in /usr/local/lib/python3.6/dist-packages (from keras-tuner) (0.22.2.post1)\n",
-            "Requirement already satisfied, skipping upgrade: pyparsing>=2.0.2 in /usr/local/lib/python3.6/dist-packages (from packaging->keras-tuner) (2.4.7)\n",
-            "Requirement already satisfied, skipping upgrade: idna<3,>=2.5 in /usr/local/lib/python3.6/dist-packages (from requests->keras-tuner) (2.10)\n",
+            "Requirement already satisfied, skipping upgrade: terminaltables in /usr/local/lib/python3.6/dist-packages (from keras-tuner) (3.1.0)\n",
+            "Requirement already satisfied, skipping upgrade: colorama in /usr/local/lib/python3.6/dist-packages (from keras-tuner) (0.4.4)\n",
+            "Requirement already satisfied, skipping upgrade: future in /usr/local/lib/python3.6/dist-packages (from keras-tuner) (0.16.0)\n",
             "Requirement already satisfied, skipping upgrade: chardet<4,>=3.0.2 in /usr/local/lib/python3.6/dist-packages (from requests->keras-tuner) (3.0.4)\n",
-            "Requirement already satisfied, skipping upgrade: certifi>=2017.4.17 in /usr/local/lib/python3.6/dist-packages (from requests->keras-tuner) (2020.12.5)\n",
             "Requirement already satisfied, skipping upgrade: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.6/dist-packages (from requests->keras-tuner) (1.24.3)\n",
-            "Requirement already satisfied, skipping upgrade: joblib>=0.11 in /usr/local/lib/python3.6/dist-packages (from scikit-learn->keras-tuner) (1.0.0)\n",
-            "Building wheels for collected packages: keras-tuner, terminaltables\n",
-            "  Building wheel for keras-tuner (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for keras-tuner: filename=keras_tuner-1.0.2-cp36-none-any.whl size=78939 sha256=03640977b83be352c49c290e4d1e1b299080d442ef9c243094dfebc89ac93628\n",
-            "  Stored in directory: /root/.cache/pip/wheels/bb/a1/8a/7c3de0efb3707a1701b36ebbfdbc4e67aedf6d4943a1f463d6\n",
-            "  Building wheel for terminaltables (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for terminaltables: filename=terminaltables-3.1.0-cp36-none-any.whl size=15358 sha256=3344514cfa97b61fc19e1f02b9ebae5d51ef8a4742f7ae44789090b1e99206c7\n",
-            "  Stored in directory: /root/.cache/pip/wheels/30/6b/50/6c75775b681fb36cdfac7f19799888ef9d8813aff9e379663e\n",
-            "Successfully built keras-tuner terminaltables\n",
-            "Installing collected packages: terminaltables, colorama, keras-tuner\n",
-            "Successfully installed colorama-0.4.4 keras-tuner-1.0.2 terminaltables-3.1.0\n"
+            "Requirement already satisfied, skipping upgrade: certifi>=2017.4.17 in /usr/local/lib/python3.6/dist-packages (from requests->keras-tuner) (2020.12.5)\n",
+            "Requirement already satisfied, skipping upgrade: idna<3,>=2.5 in /usr/local/lib/python3.6/dist-packages (from requests->keras-tuner) (2.10)\n",
+            "Requirement already satisfied, skipping upgrade: pyparsing>=2.0.2 in /usr/local/lib/python3.6/dist-packages (from packaging->keras-tuner) (2.4.7)\n",
+            "Requirement already satisfied, skipping upgrade: joblib>=0.11 in /usr/local/lib/python3.6/dist-packages (from scikit-learn->keras-tuner) (1.0.0)\n"
           ],
           "name": "stdout"
         }
@@ -140,7 +126,7 @@
         "from kerastuner.tuners import RandomSearch\r\n",
         "from kerastuner.tuners import Hyperband"
       ],
-      "execution_count": 4,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -158,7 +144,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "QBc89ZK4eBrU"
+        "id": "QBc89ZK4eBrU",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "55b4e44e-1311-4963-a4cb-914126c9e135"
       },
       "source": [
         "from sklearn.datasets import fetch_california_housing\r\n",
@@ -168,8 +158,16 @@
         "housing = fetch_california_housing()\r\n",
         "\r\n"
       ],
-      "execution_count": 36,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Downloading Cal. housing from https://ndownloader.figshare.com/files/5976036 to /root/scikit_learn_data\n"
+          ],
+          "name": "stderr"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -311,7 +309,7 @@
         "X_valid = scaler.transform(X_valid)\r\n",
         "X_test = scaler.transform(X_test)"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -339,6 +337,34 @@
             "tags": []
           },
           "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RWPZQ4fYY9QA",
+        "outputId": "f7a1c8f9-8c63-45ff-d21f-00a5daf15109",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "11610/32"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "362.8125"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 3
         }
       ]
     },
@@ -1208,13 +1234,27 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "L11C_fb5qs4m"
+      },
+      "source": [
+        "from keras.models import Sequential\r\n",
+        "from keras.layers import Dense, Activation, Embedding, Flatten, LeakyReLU, BatchNormalization, Dropout\r\n",
+        "from keras.activations import relu, sigmoid\r\n",
+        "from keras.layers import LeakyReLU"
+      ],
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "xe6hSEX3_Jij"
       },
       "source": [
         "from keras.wrappers.scikit_learn import KerasRegressor\r\n",
         "from sklearn.model_selection import GridSearchCV"
       ],
-      "execution_count": 52,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -1239,36 +1279,8 @@
         "    \r\n",
         "model = KerasRegressor(build_fn=create_model, verbose=0)"
       ],
-      "execution_count": 57,
+      "execution_count": 15,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "IpgSh5OwASkM",
-        "outputId": "78edaf3f-eac8-4e0d-a47c-0e0196d96999",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "source": [
-        "model"
-      ],
-      "execution_count": 58,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "<tensorflow.python.keras.wrappers.scikit_learn.KerasRegressor at 0x7f5b48ccf5f8>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 58
-        }
-      ]
     },
     {
       "cell_type": "code",
@@ -1276,51 +1288,96 @@
         "id": "nyGWNAc7ATCE"
       },
       "source": [
-        "layers = [[20], [40, 20], [45, 30, 15]]\r\n",
+        "layers = [(20,), (40, 20), (45, 30, 15)]\r\n",
+        "#layers = [(50,),(50, 20), (50, 30, 15), (70,45,15,5)]\r\n",
         "activations = ['relu', 'selu']\r\n",
         "param_grid = dict(layers=layers, activation=activations, batch_size = [128, 256], epochs=[30])\r\n",
         "grid = GridSearchCV(estimator=model, param_grid=param_grid)"
       ],
-      "execution_count": 59,
+      "execution_count": 21,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4k_C9hgjA4Q7",
-        "outputId": "1f6178b1-4142-4548-fd75-ce0d2ff34342",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 411
-        }
+        "id": "4k_C9hgjA4Q7"
       },
       "source": [
         "grid_result = grid.fit(X_train, y_train)"
       ],
-      "execution_count": 60,
+      "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FxD_dquwtedc",
+        "outputId": "8e1c5ba8-05d2-4c8b-fa29-c43c7fc54158",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "[grid_result.best_score_,grid_result.best_params_]"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[-0.3734518766403198,\n",
+              " {'activation': 'relu',\n",
+              "  'batch_size': 128,\n",
+              "  'epochs': 30,\n",
+              "  'layers': (45, 30, 15)}]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uJT2YLXWtrty"
+      },
+      "source": [
+        "y_test_predict = grid.predict(X_test)"
+      ],
+      "execution_count": 26,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "G8PaxmcQtvCK",
+        "outputId": "b41bc5d5-52ec-4751-895a-c3efab922a8d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "from sklearn import metrics\r\n",
+        "print('Mean Absolute Error:', metrics.mean_absolute_error(y_test, y_test_predict))  \r\n",
+        "print('Mean Squared Error:', metrics.mean_squared_error(y_test, y_test_predict))  \r\n",
+        "print('Root Mean Squared Error:', np.sqrt(metrics.mean_squared_error(y_test, y_test_predict)))\r\n",
+        "print('R2:', metrics.r2_score(y_test, y_test_predict))"
+      ],
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "/usr/local/lib/python3.6/dist-packages/sklearn/model_selection/_validation.py:536: FitFailedWarning: Estimator fit failed. The score on this train-test partition for these parameters will be set to nan. Details: \n",
-            "NameError: name 'Sequential' is not defined\n",
-            "\n",
-            "  FitFailedWarning)\n"
+            "Mean Absolute Error: 0.35937849683922385\n",
+            "Mean Squared Error: 0.29745356209580287\n",
+            "Root Mean Squared Error: 0.5453930345134624\n",
+            "R2: 0.7752044345589317\n"
           ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "error",
-          "ename": "RuntimeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-60-af7ba4e48606>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mgrid_result\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgrid\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/sklearn/model_selection/_search.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, X, y, groups, **fit_params)\u001b[0m\n\u001b[1;32m    734\u001b[0m             \u001b[0;31m# of the params are estimators as well.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    735\u001b[0m             self.best_estimator_ = clone(clone(base_estimator).set_params(\n\u001b[0;32m--> 736\u001b[0;31m                 **self.best_params_))\n\u001b[0m\u001b[1;32m    737\u001b[0m             \u001b[0mrefit_start_time\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    738\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0my\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/sklearn/base.py\u001b[0m in \u001b[0;36mclone\u001b[0;34m(estimator, safe)\u001b[0m\n\u001b[1;32m     80\u001b[0m             raise RuntimeError('Cannot clone object %s, as the constructor '\n\u001b[1;32m     81\u001b[0m                                \u001b[0;34m'either does not set or modifies parameter %s'\u001b[0m \u001b[0;34m%\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 82\u001b[0;31m                                (estimator, name))\n\u001b[0m\u001b[1;32m     83\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mnew_object\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     84\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mRuntimeError\u001b[0m: Cannot clone object <tensorflow.python.keras.wrappers.scikit_learn.KerasRegressor object at 0x7f5b48cde4a8>, as the constructor either does not set or modifies parameter layers"
-          ]
+          "name": "stdout"
         }
       ]
     }
